--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -727,7 +727,19 @@
 
 	.before-the-campaign .content-box-before .box-before{
 		margin-bottom: 0;
+		margin-left: 1em;
 	}
+
+	/* Splash page */
+	
+	.before-the-campaign .content-box-before .box-before.news{
+		margin-bottom: 0em;
+	}
+
+	.before-the-campaign .content-box-before .two-box-column .box-before.events{
+		margin-right: 1em !important;
+	}
+
 
 	/* Events */
 
