--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -70,6 +70,7 @@
 
 	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3){
 		width: 668px;
+		margin-top: 1em;
 	}
 
 	#block-views-splash-previous-campaigns-splash .view-content{
