--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -9,6 +9,7 @@
 	.before-the-campaign .content-box-before .two-box-column{
 		flex-direction: row;
 		margin-bottom: 1em;
+		margin-top: 1em;
 		.box-before.news{
 			width: 42%;
     		margin-right: 1%;
