--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1778,7 +1778,7 @@ aside.col-md-3{
     padding: 0 0 0 1em;
     border: 0;
     border-radius: 5px;
-    margin-top: 26px;
+   	margin-top: 16px !important;
     width: 100%;
 }
 
