--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3520,7 +3520,7 @@ div.workbench-info-block{
 }
 
 .panels-flexible-column-last{
-	 padding-left: 2em !important;
+	padding-left: 2em !important;
 	.pane-title{
 		float: none;
 		color: #003399;
@@ -3724,32 +3724,6 @@ body.ocp .box-type-partner{
 
 
 body.ocp, body.mp{
-	.panels-flexible-column-first{
-		.pane-node-field-mission-statement, .pane-node-field-pledge{
-			background: transparent;
-			background-size: initial;
-			margin-top: 1em;
-			border-radius: 15px;
-			margin-bottom: 1em;
-			.pane-title{
-				float: none;
-				color: #003399;
-				font-weight: 500;
-				font-size: 1.5em;
-				padding: 0 0 10px 0;
-			}
-
-			.pane-content{
-				padding: 1em;
-				padding-left: 1em;
-				padding-right: 1em;
-				font-style: normal;
-				color: #000;
-				padding: 0;
-			}
-		}
-	}
-
 	.panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
 		float: right;
 		padding-right: 0;
@@ -3800,6 +3774,70 @@ body.ocp, body.mp{
 			}
 		}
 	}
+
+	.panels-flexible-column-first{
+		.field-name-field-country{
+			img{
+				border: 0;
+				outline: 1px solid #eaeaea;
+			}
+		}
+		.pane-node-field-mission-statement, .pane-node-field-pledge{
+			background: transparent;
+			background-size: initial;
+			margin-top: 1em;
+			border-radius: 15px;
+			margin-bottom: 1em;
+			.pane-title{
+				float: none;
+				color: #003399;
+				font-weight: 500;
+				font-size: 1.5em;
+				padding: 0 0 10px 0;
+			}
+
+			.pane-content{
+				padding: 1em;
+				padding-left: 1em;
+				padding-right: 1em;
+				font-style: normal;
+				color: #000;
+				padding: 0;
+			}
+		}
+		.pane-node-field-mission-statement{
+			margin: 2rem 0 2rem;
+		}
+	}
+	.panels-flexible-column-last{
+		.pane-node-field-country{
+			padding: 1rem 0;
+			display: flex;
+		}
+		.pane-node-field-website{
+			.field-type-link-field{
+				padding: 0 0 1rem 0;
+				a{
+				    font-style: normal;
+				    width: auto;
+				    &[target="_blank"]:after{
+				    	background-image: url(../images/target-blank.png);
+					    background-size: 1rem 1rem;
+					    display: inline-block;
+					    width: 1rem; 
+					    height: 1rem;
+					    content:"";
+					    left: 0.5rem;
+				    }
+				}
+			}
+		}
+		.field-type-link-field {
+			margin-bottom: 0.5rem;
+
+		}
+
+	}
 }
 
 body.fop{ 
@@ -3812,7 +3850,7 @@ body.fop{
 				float: none;
 				font-weight:bold;
 			}
-		} 
+		}
 	}
 
 	.panels-flexible-region-partner_detail-left_left{
@@ -3821,9 +3859,99 @@ body.fop{
     		clear: both;
 		}
 	}
+
+	.panels-flexible-column-first{
+		.field-name-field-country{
+			img{
+				border:0;
+			}
+		}
+		.pane-node-field-country{
+			margin: 0rem 0 1rem 0;
+		    display: flex;
+		}
+		.pane-node-field-website{
+			clear: both;
+			a{
+				font-style: italic;
+			}			
+		}
+		.pane-node-field-orgtype{
+			padding-top: 0.5rem;
+			*{
+				padding: 0;
+			}
+		}
+		.pane-node-field-bussines-sector{
+			padding-top: 0.8rem;
+		}
+		.pane-node-field-mission-statement{
+			margin: 5rem 0 2rem;
+		}
+	}
+	.panels-flexible-column-last{
+		.pane-node-field-country{
+			padding: 1rem 0;
+			display: flex;
+		}
+		.pane-node-field-website{
+			.field-type-link-field{
+				padding: 0 0 1rem 0;
+				a{
+				    font-style: italic;
+				}
+			}
+		}
+	}
+
 }
 
 body.een{
+	.panels-flexible-column-first{
+		.field-name-field-country{
+			img{
+				border:0;
+			}
+		}
+		.pane-node-field-country{
+			margin: 0rem 0 1rem 0;
+		    display: flex;
+		}
+		.pane-node-field-website{
+			clear: both;
+			a{
+				font-style: italic;
+			}			
+		}
+		.pane-node-field-orgtype{
+			padding-top: 0.5rem;
+			*{
+				padding: 0;
+			}
+		}
+		.pane-node-field-bussines-sector{
+			padding-top: 0.8rem;
+		}
+		.pane-node-field-mission-statement{
+			margin: 5rem 0 2rem;
+		}
+	}
+	.panels-flexible-column-last{
+		.pane-node-field-country{
+			padding: 1rem 0;
+			display: flex;
+		}
+		.pane-node-field-website{
+			.field-type-link-field{
+				padding: 0 0 1rem 0;
+				a{
+				    font-style: italic;
+				}
+			}
+		}
+	}
+
+	
 	.panels-flexible-region-partner_detail-left_right-inside{
 		.field-type-link-field, .field-name-field-abbreviation-name, .field-name-field-orgtype, .pane-node-field-bussines-sector{
 			font-weight: bold;
