--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3722,8 +3722,7 @@ body.ocp .box-type-partner{
 	}
 }
 
-
-body.ocp, body.mp{
+body.mp{
 	.panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
 		float: right;
 		padding-right: 0;
@@ -3775,6 +3774,122 @@ body.ocp, body.mp{
 		}
 	}
 
+	.panels-flexible-column-first{
+		.pane-node-field-country{
+			float: left;
+			min-height: 11rem;
+			.field-name-field-country{
+				
+				img{
+					border: 0;
+					border: 1px solid #eaeaea;
+				}
+			}
+		}
+		.pane-node-field-website{
+			float: left;
+			a{
+				font-style: italic;
+			}
+		}
+		.pane-node-field-mission-statement, .pane-node-field-pledge{
+			background: transparent;
+			background-size: initial;
+			margin-top: 1em;
+			border-radius: 15px;
+			margin-bottom: 1em;
+			.pane-title{
+				float: none;
+				color: #003399;
+				font-weight: 500;
+				font-size: 1.5em;
+				padding: 0 0 10px 0;
+			}
+
+			.pane-content{
+				padding: 1em;
+				padding-left: 1em;
+				padding-right: 1em;
+				font-style: normal;
+				color: #000;
+				padding: 0;
+			}
+		}
+		.pane-node-field-mission-statement{
+			margin: 2rem 0 2rem;
+		}
+	}
+	.panels-flexible-column-last{
+		.pane-node-field-country{
+			padding: 1rem 0;
+			display: flex;
+		}
+		.pane-node-field-general-phone{
+			padding: 0.5rem 0;
+		}
+		.pane-custom{
+			padding-top: 3rem;
+		}
+		.field-type-link-field {
+			margin-bottom: 0.5rem;
+
+		}
+
+	}
+}
+
+
+body.ocp{
+	.panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
+		float: right;
+		padding-right: 0;
+	}
+
+	.pane-node-field-orgtype{
+		.pane-title{
+			float: left;
+			text-transform: uppercase;
+			border: 2px solid #d9e996;
+			border-radius: 5px;
+			padding: 3px 8px;
+			color: #003399;
+			font-weight: 600;
+			margin-right: 10px;
+		}
+		.pane-content{
+			float: left;
+			color: #333;
+			.field-name-field-orgtype{
+				padding-top: 4px;
+				font-weight: normal;
+			}
+		}
+	}
+
+	.pane-node-field-bussines-sector{
+		float: right;
+		padding-top: 0 !important;
+		margin-right: 2em;
+		clear: none;
+		.pane-title{
+			float: left;
+			text-transform: uppercase;
+			border: 2px solid #d9e996;
+			border-radius: 5px;
+			padding: 3px 8px;
+			color: #003399;
+			font-weight: 600;
+			margin-right: 10px;
+		}
+		.pane-content{
+			float: left;
+			color: #333;
+			.field-type-taxonomy-term-reference{
+				padding-top: 4px;
+				font-weight: normal;
+			}
+		}
+	}
 	.panels-flexible-column-first{
 		.field-name-field-country{
 			img{
@@ -3834,10 +3949,21 @@ body.ocp, body.mp{
 		}
 		.field-type-link-field {
 			margin-bottom: 0.5rem;
-
+		}
+		.pane-node-field-general-phone{
+			padding: 0;
+			.pane-title{
+				float: none;
+				padding: 0;
+				font-weight: normal;
+			}
+			.pane-content{
+				float: none;
+				padding: 0;
+			}
 		}
 
-	}
+	}	
 }
 
 body.fop{ 
@@ -3940,14 +4066,21 @@ body.een{
 		.pane-node-field-country{
 			padding: 1rem 0;
 			display: flex;
+			width: 100%;
+		}
+		.pane-node-field-general-phone{
+			padding: 0;
 		}
 		.pane-node-field-website{
 			.field-type-link-field{
-				padding: 0 0 1rem 0;
+				padding: 0;
 				a{
 				    font-style: italic;
 				}
 			}
+		}
+		.pane-node-field-ph-address {
+		    padding-top: 1.4rem;
 		}
 	}
 
