--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3974,6 +3974,9 @@ body.ocp{
 		.field-type-link-field {
 			margin-bottom: 0.5rem;
 		}
+		.pane-node-title-field{
+			margin-top: 1.8rem;
+		}
 		.pane-node-field-general-phone{
 			padding: 0;
 			.pane-title{
