--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4002,6 +4002,9 @@ body.ocp{
 		.field-name-title-field {
 		    font-weight: normal;
 		}
+		.pane-node-field-ph-address{
+			padding-top:0; 
+		}
 	}	
 }
 
