--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4005,6 +4005,14 @@ body.ocp{
 		.pane-node-field-ph-address{
 			padding-top:0; 
 		}
+		.pane-node-field-country{
+			padding:0; 
+			.field-name-field-country{
+				padding: 0;
+				font-size: 1.4rem;
+				color: #000;
+			}
+		}
 	}	
 }
 
