--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4972,6 +4972,7 @@ ul[data-sa-theme="basic-green"].ui-menu{
     width: 288px;
     float: right;
     height: 100%;
+    margin-bottom: 2em;
 
     #edit-subscribe-details{
     	text-align: left !important;
