HW20-132 - Splash page

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -235,6 +235,7 @@ body .more-link:before {
   text-align: center;
   color: #FFF;
   font-weight: 400;
+  font-style: normal;
   margin-right: 2em;
   font-size: 4rem;
   padding-top: 3px;
@@ -281,10 +282,11 @@ ul.time-and-counters li .counter-label {
 }
 .before-the-campaign h2 {
   text-align: center;
-  padding-top: 2em;
+  padding-top: 1em;
   padding-bottom: 1em;
   color: #00309d;
   font-weight: 400;
+  font-style: normal;
 }
 .before-the-campaign .content-box-before {
   display: flex;
@@ -492,7 +494,7 @@ ul.time-and-counters li .counter-label {
 .start-browsing .start-browsing-box h3 {
   color: #00309d;
   margin-top: 0;
-  font-style: italic;
+  font-style: normal;
   padding-left: 0.3em;
   padding-top: 0.2em;
 }
