--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -275,6 +275,7 @@ body .more-link{
 		text-align: center;
 		color:#FFF;
 		font-weight: 400;
+		font-style: normal;
 		margin-right: 2em;
 		font-size: 4rem;
     	padding-top: 3px;
@@ -324,10 +325,11 @@ ul.time-and-counters{
 	clear: both;
 	h2{
 		text-align: center;
-		padding-top: 2em;
+		padding-top: 1em;
 		padding-bottom: 1em;
 		color:#00309d;
 		font-weight: 400;
+		font-style: normal;
 	}
 
 	.content-box-before{
@@ -558,7 +560,7 @@ ul.time-and-counters{
 		h3{
 			color:#00309d;
 			margin-top: 0;
-			font-style: italic;
+			font-style: normal;
 			padding-left: 0.3em;
     		padding-top: 0.2em;
 		}
