--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -157,7 +157,7 @@ ul.tabs--primary.nav.nav-tabs{
 			color: @h2-default-color-3;
 			font-size: @h2-default-size-3;
 			font-weight: 100;
-			font-style: italic;
+			font-style: normal;
 			margin-top: 0px;
 			a:empty {
 				display: none;
