--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2460,7 +2460,7 @@ span.pages{
 
 .publications-right-column{
 	h2 a{
-		font-style: italic;
+		font-style: normal;
 		font-size: 0.7em;
 	}
 	.news-see-more-button{
@@ -5048,5 +5048,27 @@ ul[data-sa-theme="basic-green"].ui-menu{
 .node-article{
 	.field-name-body{
 		clear: both;
+	}
+}
+
+/* Campaigns Materials */
+
+.page-tools-and-publications-campaign-materials{
+	.panels-flexible-row-last{
+		background: #efefef;
+		padding-bottom: 3em;
+	}
+	.panel{
+		background: transparent;
+		box-shadow: 0 0 0 rgba(0, 0, 0, 0)
+	}
+
+	.publications-right-column{
+		h2{
+			margin-top: 0;
+			line-height: 23px;
+			padding-top: 0;
+			padding-bottom: 0;
+		}
 	}
 }
